@@ -57,7 +57,7 @@
          "web" : "https://github.com/nichtich/File-Hotfolder"
       }
    },
-   "version" : "0.02",
+   "version" : "0.03",
    "x_contributors" : [
       "Jakob Voss <voss@gbv.de>"
    ]
