@@ -5,9 +5,6 @@ use File::Hotfolder;
 
 # watch a given directory and print all new or modified files 
 File::Hotfolder->new( 
-    watch    => ($ARGV[0] // '.'),
-    callback => sub {
-        my $path = shift;
-        say $path;
-    }
+    watch => ($ARGV[0] // '.'),
+    print => FILE_FOUND,
 )->loop;
